<resources>
    <string name="app_name">Travel Deal 2</string>

    <string name="Add_travel">New travel</string>
    <string name="My_travels">My travels</string>
    <string name="Sign_out">Sign out</string>
    <string name="clientNameHint">Name</string>
    <string name="phoneNameHint">Phone number</string>
    <string name="emailAddressHint">Email address</string>
    <string name="departureAddressHint">Collection address</string>
    <string name="destinationAddressHint">Destination address</string>
    <string name="fromTitle">from:</string>
    <string name="toTitle">to:</string>
    <string name="passengersNumber"> passengers</string>
    <string name="onePassengers">one passenger</string>
    <string name="passengersNumberHint"> Number of passengers</string>
    <string name="departureDateHint"> Departure date</string>
    <string name="returnDateHint">Return date</string>
    <string name="statusText">Travel status</string>
    <string name="buttonSaveText">Save</string>
    <string name="header_travel_details">"Fill Details"</string>
    <string name="num_bigger_than_0">The number must be bigger than zero</string>
    <string name="enter_exit_date_first">Please enter a departure date first</string>
    <string name="enter_start_date_first">Please enter start date first</string>
    <string name="fill_all_fields">All fields should be filled</string>
    <string name="saved_success">Details saved successfully!</string>
    <string name="incorrect_email">The email address is incorrect</string>
    <string name="incorrect_phone_number">Phone number is incorrect</string>
    <string name="admin_tab">Admin</string>
    <string name="travels_tab">Travels search</string>
    <string name="travels_dont_exists">No travels on selected dates</string>
    <string name="no_travels">No travels</string>

    <string-array name="status_array">
        <item>SEND</item>
        <item>RECEIVED</item>
        <item>RUN</item>
        <item>CLOSED</item>
        <item>PAID</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Start_date">Start date</string>
    <string name="End_date">End date</string>
    <string name="AriLazarApi" translatable="false">AIzaSyBlm-gYIse1zkWi3WwqQg3w9UOxRm4P3pE</string>
    <string name="pick_dats">Select dates to filter</string>
    <string name="log_out">Log out</string>
    <string name="distance_title">Select travels in your area</string>
    <string name="distance">Distance</string>
    <string name="interested">Interested in the travel</string>
    <string name="Approved">Approved</string>
    <string name="customerName">Customer name:</string>
    <string name="travelDays">Travel days:</string>
    <string name="paid">Paid</string>
    <string name="welcome">Welcome</string>
    <string name="enter_password">Please enter an admin password</string>
    <string name="password">Password</string>
    <string name="admin_enter">Manager login</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="wrong_password">Wrong password</string>
    <string name="Sign_out_toast">You have been logged out</string>
    <string name="confirmed">Registered in the system</string>
    <string name="switch_paid_up">Commission paid?</string>
    <string name="paid_up_toast">Commission paid</string>
    <string name="vehicle_location">Vehicle location</string>

</resources>