<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single"
       >

        <item
            android:id="@+id/nav_myTravels"
            android:icon="@drawable/ic_bus"
            android:title="@string/My_travels"
            />
        <item
            android:id="@+id/nav_searchTravels"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/travels_tab" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_user_admin_icon_1"
            android:title="@string/admin_tab" />
    </group>
    <group>
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_sign_out_icon_2"
            android:title="@string/log_out" />
    </group>

</menu>