<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="#80ffffff"
    app:cardElevation="0.05dp"
    >
    <!--    tools:showIn="@layout/company_travel_card"-->
    <RelativeLayout
        android:id="@+id/cardMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">



        <ImageView
            android:id="@+id/image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_bus" />

        <TextView
            android:id="@+id/DepartureAddressTitle"
            android:layout_width="34dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="8dp"
            android:layout_toEndOf="@+id/image_view"
            android:layout_toRightOf="@+id/image_view"
            android:text="@string/fromTitle"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextViewDepartureAddress"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="8dp"
            android:layout_toEndOf="@+id/DepartureAddressTitle"
            android:layout_toRightOf="@+id/DepartureAddressTitle"
            android:text="DepartureAddress"
            android:textColor="#59b2d6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DestinationAddressTitle"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_below="@+id/DepartureAddressTitle"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="8dp"
            android:layout_toEndOf="@+id/image_view"
            android:layout_toRightOf="@+id/image_view"
            android:text="@string/toTitle"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextViewDestinationAddress"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_below="@+id/TextViewDepartureAddress"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="8dp"
            android:layout_toEndOf="@+id/DepartureAddressTitle"
            android:layout_toRightOf="@+id/DestinationAddressTitle"
            android:text="DestinationAddress"
            android:textColor="#59b2d6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextViewDepartureDate"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/TextViewDestinationAddress"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_toEndOf="@+id/DepartureAddressTitle"
            android:layout_toRightOf="@+id/DepartureAddressTitle"
            android:text="DepartureDate"
            android:textColor="#59b2d6"
            android:textStyle="bold" />

        <View
            android:id="@+id/dividerLine"
            android:layout_width="5dp"
            android:layout_height="1dp"
            android:layout_below="@+id/TextViewDestinationAddress"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_toEndOf="@+id/TextViewDepartureDate"
            android:layout_toRightOf="@+id/TextViewDepartureDate"
            android:background="#59b2d6"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/TextViewReturnDate"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/TextViewDestinationAddress"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/dividerLine"
            android:layout_toRightOf="@+id/dividerLine"
            android:text="ReturnDate"
            android:textColor="#59b2d6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextViewPassengersNumber"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/TextViewReturnDate"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/DepartureAddressTitle"
            android:layout_toRightOf="@+id/DepartureAddressTitle"
            android:text="PassengersNumber"
            android:textColor="#59b2d6"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/switchrLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextViewPassengersNumber"
            android:visibility="visible"
            android:orientation="horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_interested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interested"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>

            <CheckBox
                android:id="@+id/cb_ready_to_drive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Approved"
                android:clickable="false"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:textSize="12dp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:gravity="center"/>

        </LinearLayout>


        <!--        android:layout_toEndOf="@+id/TextViewDestinationAddress"-->
        <!--        android:layout_toRightOf="@+id/TextViewDestinationAddress"-->
        <LinearLayout
            android:id="@+id/ExpandableLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/switchrLayout"
            android:visibility="visible"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_create_call"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:textSize="12dp"
                android:background="@drawable/rounded_corner_grey_bg"
                android:src="@drawable/ic_baseline_call"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_send_sms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:textSize="12dp"
                android:background="@drawable/rounded_corner_grey_bg"
                android:src="@drawable/ic_baseline_sms"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_send_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:textSize="12dp"
                android:background="@drawable/rounded_corner_grey_bg"
                android:src="@drawable/ic_baseline_email"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>